--- a/src/components/ActionBar.astro
+++ b/src/components/ActionBar.astro
@@ -3,23 +3,45 @@ import UnoIcon from '@/icons/undo.astro'
 import RedoIcon from '@/icons/redo.astro'
 import TodoIcon from '@/icons/todo.astro'
 import BackIcon from '@/icons/back.astro'
+
+interface Props {
+	actions: boolean
+	backButton: boolean
+}
+
+const { actions = true, backButton = true } = Astro.props
 ---
 
 <nav
 	class="flex w-full items-center justify-between py-6 ps-2 pe-8 text-lg
 	text-accent"
 >
-	<ul class="p-2">
-		<li
-			id="back"
-			class="list-none cursor-pointer"
-		>
-			<BackIcon class="size-6" />
-		</li>
-	</ul>
-	<ul class="flex items-center gap-2">
-		<li id="undo"><UnoIcon class="size-6" /></li>
-		<li id="redo"><RedoIcon class="size-6" /></li>
-		<li id="toggle"><TodoIcon class="size-6" /></li>
-	</ul>
+	{
+		backButton && (
+			<ul class="p-2">
+				<li
+					id="back"
+					class="list-none cursor-pointer"
+					onclick="window.history.back()"
+				>
+					<BackIcon class="size-6" />
+				</li>
+			</ul>
+		)
+	}
+	{
+		actions && (
+			<ul class="flex items-center gap-2">
+				<li id="undo">
+					<UnoIcon class="size-6" />
+				</li>
+				<li id="redo">
+					<RedoIcon class="size-6" />
+				</li>
+				<li id="toggle">
+					<TodoIcon class="size-6" />
+				</li>
+			</ul>
+		)
+	}
 </nav>
