--- a/src/pages/notes/new.astro
+++ b/src/pages/notes/new.astro
@@ -1,66 +1,37 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import FormInput from '@/components/FormInput.astro'
-import { toLocal } from '@/utils/date'
-
-const { title, description, content, todos } = Astro.props as Note
+interface Props {
+	title: string
+	description: string
+	content: string
+	todo?: Todo[]
+}
+const { title, description, content } = Astro.props as Note
 ---
 
-<!-- 
-  id: string
-	title: string
-	content: string
-	todos?: string[]
-	reminders?: string
-	attachments?: string[]
-	createdAt: Date
-	updatedAt: Date
- -->
 <Layout
-	title="Nueva entrada"
+	title="Nueva Nota"
 	actionBar
+	backButton
 >
-	<main class="w-full max-w-5xl mt-2 text-primary text-lg">
+	<main class="w-full max-w-5xl text-primary text-lg">
 		<form
 			method="POST"
-			class="flex flex-col w-full bg-background rounded-lg p-6"
+			class="flex flex-col w-full bg-background rounded-lg px-6"
 		>
 			<FormInput
 				class="text-2xl font-bold text-accent"
 				name="title"
-				placeholder={title || 'Homework'}
-			/>
-			<small class="my-2"
-				>{toLocal(new Date(), { dateStyle: 'long', timeStyle: 'short' })}</small
-			>
-			<FormInput
-				class="border-l-4 border-accent ps-2 my-4"
-				name="description"
-				placeholder={description ||
-					'Find 10 videos about ilutsrations to share with classmates next week.'}
-				type="textarea"
+				placeholder="Título"
 			/>
 
 			<FormInput
-				class="w-full text-pretty text-lg p-2 my-4"
+				class="w-full text-pretty text-lg my-4 text-accent"
 				name="content"
 				type="textarea"
-				placeholder={content ||
-					'An ilustratuin is a decoration, interpretation or visual explanation of a text, concept or process, designed for integration in published media, such as posters, flyers, magazines, books, teaching materials, animations, video games and films. An ilustration is tipically created by an ilustrator.'}
+				placeholder="Nota"
 			/>
-
-			{
-				todos && (
-					<div class="flex flex-col my-4">
-						<h3 class="text-xl font-bold">To do</h3>
-						<ul class="list-disc list-inside">
-							{todos.map((todo) => (
-								<li>{todo}</li>
-							))}
-						</ul>
-					</div>
-				)
-			}
 		</form>
 	</main>
 </Layout>
