--- a/src/components/ActionBar.astro
+++ b/src/components/ActionBar.astro
@@ -17,7 +17,7 @@ const { actions = false } = Astro.props
 >
 	<ul class="p-2">
 		<li
-			id="back"
+			id="back-btn"
 			class="list-none cursor-pointer"
 			onclick="window.history.back()"
 		>
