--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,12 +10,7 @@ interface Props {
 	backButton?: boolean
 }
 
-const {
-	title,
-	actionBar = false,
-	bottomBar = false,
-	backButton = false,
-} = Astro.props
+const { title, actionBar = false, bottomBar = false } = Astro.props
 ---
 
 <!doctype html>
@@ -47,10 +42,7 @@ const {
 	</head>
 	<body class="flex justify-center min-h-svh">
 		<div class="relative w-screen max-w-5xl flex flex-col items-center">
-			<ActionBar
-				backButton={backButton}
-				actions={actionBar}
-			/>
+			<ActionBar actions={actionBar} />
 			<slot />
 			{bottomBar && <BottomBar />}
 		</div>
