--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,10 +6,11 @@ import { ViewTransitions } from 'astro:transitions'
 interface Props {
 	title: string
 	actionBar?: boolean
+	back?: boolean
 	bottomBar?: boolean
 }
 
-const { title, actionBar = false, bottomBar = false } = Astro.props
+const { title, actionBar = false, bottomBar = false, back } = Astro.props
 ---
 
 <!doctype html>
@@ -41,7 +42,14 @@ const { title, actionBar = false, bottomBar = false } = Astro.props
 	</head>
 	<body class="flex justify-center min-h-svh">
 		<div class="relative w-screen max-w-5xl flex flex-col items-center">
-			<ActionBar actions={actionBar} />
+			{
+				actionBar && (
+					<ActionBar
+						actions={actionBar}
+						back={back}
+					/>
+				)
+			}
 			<slot />
 			{bottomBar && <BottomBar />}
 		</div>
