--- a/src/pages/appointments/[id].astro
+++ b/src/pages/appointments/[id].astro
@@ -18,7 +18,7 @@ if (!appointment) return
 
 <Layout
 	title={`Appointment: ${appointment.title}`}
-	backButton
+	back
 >
 	<div>
 		<h2>{appointment.title}</h2>
