--- a/src/pages/notes/new.astro
+++ b/src/pages/notes/new.astro
@@ -25,32 +25,39 @@ import FormInput from '@/components/FormInput.astro'
 		</form>
 	</main>
 </Layout>
-<script>
-	const back = document.querySelector(`#back-btn`)
-	back?.addEventListener(`click`, () => {
-		console.log(`going back`)
-		window.history.back()
-	})
-</script>
 
 <script>
-	const form = document.querySelector(`form`)
-	form?.addEventListener(`submit`, async (e) => {
-		e.preventDefault()
-		const formData = new FormData(form)
-		const data = Object.fromEntries(formData)
-		const response = await window.fetch('/api/notes', {
-			method: 'POST',
-			body: JSON.stringify(data),
-			headers: {
-				'Content-Type': `application/json`,
-			},
-		})
-		if (response.ok) {
-			console.log(`response ok`)
-			window.location.href = `/`
-		} else {
-			console.error(`Error:`, response)
+	document.addEventListener('astro:page-load', () => {
+		const back = document.querySelector(`#back-btn`)
+		const form = document.querySelector(`form`) as HTMLFormElement
+
+		const saveNote = async () => {
+			const formData = new FormData(form)
+			const data = Object.fromEntries(formData)
+
+			const response = await window.fetch('/api/notes', {
+				method: 'POST',
+				body: JSON.stringify(data),
+				headers: {
+					'Content-Type': `application/json`,
+				},
+			})
+			if (response.ok) {
+				console.log(`response ok`)
+				window.location.href = `/`
+			} else {
+				console.error(`Error:`, response)
+			}
 		}
+
+		back?.addEventListener(`click`, async () => {
+			await saveNote()
+			window.history.back()
+		})
+
+		form?.addEventListener(`submit`, async (e) => {
+			e.preventDefault()
+			await saveNote()
+		})
 	})
 </script>
