--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -5,7 +5,7 @@ import Layout from '@/layouts/Layout.astro'
 <Layout
 	title="Perfil"
 	actionBar
-	backButton
+	back
 >
 	<main class="text-white">
 		<h1 class="text-2xl">Profile</h1>
