--- a/src/pages/notes/new.astro
+++ b/src/pages/notes/new.astro
@@ -3,10 +3,7 @@ import Layout from '@/layouts/Layout.astro'
 import FormInput from '@/components/FormInput.astro'
 ---
 
-<Layout
-	title="Nueva Nota"
-	actionBar
->
+<Layout title="Nueva Nota">
 	<main class="w-full max-w-5xl text-primary text-lg">
 		<form class="flex flex-col w-full bg-background rounded-lg px-6">
 			<FormInput
