remove db and auth pakages

--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -1,11 +1,11 @@
 ---
 import UserIcon from '@/icons/user.astro'
 import CogIcon from '@/icons/cog.astro'
-import type { User } from '@auth/core/types'
+// import type { User } from '@auth/core/types'
 
-interface Props {
-	user?: User
-}
+// interface Props {
+// 	user?: User
+// }
 
 const { user } = Astro.props
 ---
