--- a/src/sections/Entries.astro
+++ b/src/sections/Entries.astro
@@ -1,6 +1,6 @@
 ---
-import { db, Notes } from 'astro:db'
-const notes = await db.select().from(Notes)
+// import { db, Notes } from 'astro:db'
+// const notes = await db.select().from(Notes)
 import Entry from '@/components/Entry.astro'
 import { entryTypes } from '@/data/types'
 
@@ -10,7 +10,7 @@ import { APPOINTMENTS } from '@/data/appointments'
 <section class="flex flex-col">
 	<h2 class="text-lg ms-4 mt-4 text-primary">Últimas Notas</h2>
 
-	{notes.map((note) => <Entry entry={{ ...note, type: entryTypes.NOTE }} />)}
+	<!-- {notes.map((note) => <Entry entry={{ ...note, type: entryTypes.NOTE }} />)} -->
 	<h2 class="text-lg ms-4 mt-4 text-primary">Próximas Citas</h2>
 	{
 		APPOINTMENTS.map((appointment) => (
