--- a/src/pages/notes/[id].astro
+++ b/src/pages/notes/[id].astro
@@ -1,5 +1,5 @@
 ---
-import { db, Notes, Todos, eq } from 'astro:db'
+// import { db, Notes, Todos, eq } from 'astro:db'
 
 import Layout from '@/layouts/Layout.astro'
 import FormInput from '@/components/FormInput.astro'
@@ -10,19 +10,19 @@ if (!id) {
 	throw new Error('Note id is required')
 }
 
-const res = await db.select().from(Notes).where(eq(Notes.id, id))
+// const res = await db.select().from(Notes).where(eq(Notes.id, id))
 
-const [note] = res
+// const [note] = res
 
-const todos = await db
-	.select({ title: Todos.title, completed: Todos.completed })
-	.from(Todos)
-	.where(eq(Todos.noteId, id))
+// const todos = await db
+// 	.select({ title: Todos.title, completed: Todos.completed })
+// 	.from(Todos)
+// 	.where(eq(Todos.noteId, id))
 
 const edit = toLocal(new Date(), { timeStyle: 'short' })
 ---
 
-<Layout title={note.title}>
+<Layout title={'note.title'}>
 	<main class="w-full max-w-5xl mt-2 text-primary text-lg">
 		<form
 			method="POST"
@@ -32,24 +32,24 @@ const edit = toLocal(new Date(), { timeStyle: 'short' })
 				class="text-2xl font-bold text-accent"
 				name="title"
 				placeholder="Título"
-				value={note.title}
+				value={'note.title'}
 			/>
 			<FormInput
 				class="border-l-4 border-accent ps-2 my-4"
 				name="description"
 				type="textarea"
-				value={note.description}
+				value={'note.description'}
 			/>
 
 			<FormInput
 				class="w-full text-pretty text-lg p-2 my-4"
 				name="content"
 				type="textarea"
-				placeholder={note.content || 'Nota'}
-				value={note.content}
+				placeholder={'note.content' || 'Nota'}
+				value={'note.content'}
 			/>
 
-			{
+			<!-- {
 				todos && (
 					<div class="flex flex-col my-4">
 						<h3 class="text-xl font-bold">To do</h3>
@@ -60,7 +60,7 @@ const edit = toLocal(new Date(), { timeStyle: 'short' })
 						</ul>
 					</div>
 				)
-			}
+			} -->
 			<p>
 				text style bar -
 				<small class="my-2">Editado {edit}</small>
