--- a/src/pages/profile/logout.astro
+++ b/src/pages/profile/logout.astro
@@ -1,23 +1,21 @@
 ---
-import type { User } from '@auth/core/types'
-
+// import type { User } from '@auth/core/types'
 
 interface Props {
-	user: User
+	// user: User
 }
 
-const { user } = Astro.props
-
+// const { user } = Astro.props
 ---
 
 <section>
 	<div class="flex gap-4">
 		<img
 			class="rounded-full size-12"
-			src={user.image}
-			alt=`imagen del usuario ${user.name}`
+			src={'user.image'}
+			alt=`imagen del usuario {user.name}`
 		/>
-		<h3 class="font-bold text-accent text-xl">{user.name}</h3>
+		<h3 class="font-bold text-accent text-xl">{'user.name'}</h3>
 	</div>
 	<button
 		id="logout"
