--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,5 +22,5 @@ const logout = () => {
 		<Search />
 		<Entries />
 	</main>
-	<SideBar user={user} logout={logout} />
+	<SideBar user={user} />
 </Layout>
